# vpn_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  compose.yml  pyproject.toml
bot/: __main__.py  bot.py  env.py  get_user_info.py  i18n.py  logger.py  redis.py
locales/: en.json  ru.json
